# imm_controller

./: CMakeLists.txt  README.md  imm_plugin.xml  package.xml
.github/workflows/: build.yml
doc/: userdoc.rst
include/imm_controller/: imm_controller.hpp  multi_interface_imm_controller.hpp  visibility_control.h
include/imm_controller/test/: ur_urdf.hpp
src/: imm_controller.cpp  imm_parameters.yaml
